# Fusion_camera

opencv_exercises/: CMakeLists.txt
opencv_exercises/src/: 01_load_image.cpp  02_load_image.cpp  03_load_image.cpp  make_matrix.cpp  manipulate_matrix.cpp
